# pyextern-molasses

./: .gitignore  README.md  build.hxml  default.nix  flake.nix  pyproject.toml
misc/nix/: pyextern.nix
src/pyextern/: cli.py
